@@ -3,7 +3,6 @@ package com.moffatbay.servlets;
 import com.moffatbay.beans.Customer;
 import com.moffatbay.utils.PasswordHash;
 import com.moffatbay.utils.DatabaseUtils;
-import jakarta.servlet.ServletContext;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServlet;
@@ -23,17 +22,7 @@ import java.util.Map;
 public class RegistrationServlet extends HttpServlet {
     @Serial
     private static final long serialVersionUID = 1L;
-    private String dbURL;
-    private String dbUser;
-    private String dbPassword;
 
-    @Override
-    public void init() throws ServletException {
-        ServletContext context = getServletContext();
-        dbURL = context.getInitParameter("dbName");
-        dbUser = context.getInitParameter("dbUser");
-        dbPassword = context.getInitParameter("dbPass");
-    }
 
     @Override
     protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
@@ -87,7 +76,7 @@ public class RegistrationServlet extends HttpServlet {
         parameters.add(hashedPassword);
 
         try {
-            DatabaseUtils.executeUpdate(query, parameters, dbURL, dbUser, dbPassword);
+            DatabaseUtils.executeUpdate(query, parameters);
         } catch (SQLException | ClassNotFoundException e) {
             throw new ServletException("Error inserting customer into database", e);
         }
@@ -111,8 +100,8 @@ public class RegistrationServlet extends HttpServlet {
         List<Object> parameters = List.of(email);
 
         try {
-            List<Map<String, Object>> results = DatabaseUtils.executeQueryWithParams(query, parameters, dbURL, dbUser, dbPassword);
-            if (!results.isEmpty() && ((Long) results.get(0).get("COUNT(*)")) > 0) {
+            List<Map<String, Object>> results = DatabaseUtils.executeQueryWithParams(query, parameters);
+            if (!results.isEmpty() && ((Long) results.getFirst().get("COUNT(*)")) > 0) {
                 return true;
             }
         } catch (SQLException | ClassNotFoundException e) {
